<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:title="@string/home" />

        <item
            android:id="@+id/postOverviewFragment"
            android:title="@string/timeline" />

        <item
            android:id="@+id/postCreationFragment"
            android:title="@string/create_post" />

        <item
            android:id="@+id/profielFragment"
            android:title="@string/profile" />

        <item
            android:id="@+id/loginFragment"
            android:title="@string/login" />
    </group>

</menu>